# polyhook

./: .cspell.json  .gitignore  ARCHITECTURE.md  BINDINGS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  schema.json  tools.toml
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml  README.md  build.rs  schema.json
core/src/: detect.rs  detect_tests.rs  events.rs  events_tests.rs  lib.rs  lib_tests.rs  parse.rs  parse_tests.rs  response.rs  response_tests.rs  stdin_wrappers.rs  tools.rs  tools_tests.rs  type_impls.rs  types.rs  wasm.rs
core/tests/: parse_tests.rs  response_tests.rs
core/tests/fixtures/: amp-tool-after.json  amp-tool-before.json  claude-code-post-tool-hook-event-name.json  claude-code-post-tool.json  claude-code-pre-tool-hook-event-name.json  claude-code-pre-tool.json  claude-code-startup.json  cline-after-tool.json  cline-before-tool.json  cursor-after-tool.json  cursor-before-tool.json  cursor-session-start.json  gemini-cli-after-tool.json  gemini-cli-before-tool.json  gemini-cli-session-start.json  hermes-post-tool.json  hermes-pre-tool.json  hermes-session-start.json  windsurf-post-tool.json  windsurf-pre-tool.json
docs/: tool-names.md
githooks/: pre-push
scripts/: gen-readmes.sh
