[package]
name = "polyhook-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4"

[build-dependencies]
serde_json = "1"
typify = "0.6"
schemars = "0.8"
prettyplease = "0.2"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
