[package]
name = "polyhook-core"
version = "0.1.0"
edition = "2021"
description = "Core types and utilities for polyhook — write AI coding agent hooks once, run them everywhere"
license = "MIT"
repository = "https://github.com/tupe12334/polyhook"
homepage = "https://github.com/tupe12334/polyhook"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4"

[dev-dependencies]
temp-env = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
serde_json = "1"
typify = "0.6"
schemars = "0.8"
prettyplease = "0.2"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
